Fixes z-index and adds manual # overide

--- a/main.css
+++ b/main.css
@@ -35,6 +35,8 @@ button{
 
 .title, .explanation{
     text-align: center;
+    position: relative;
+    z-index: 1;
 }
 
 .title{
@@ -42,7 +44,7 @@ button{
     color: #B3A369;
     padding-top: 0;
     margin-top: 0;
-    position: relative;
+    
 }
 
 .explanation{
@@ -62,7 +64,7 @@ button{
     margin: 0 auto;
     height: 30rem;
     position: relative;
-    z-index: -1;
+    z-index: 0;
     padding-top: 0;
 }
 
